--- a/spring-batch-docs/modules/ROOT/pages/index.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/index.adoc
@@ -9,40 +9,40 @@ and link:../epub/spring-batch-reference.epub[EPUB] documents.
 The reference documentation is divided into several sections:
 
 [horizontal]
-<<spring-batch-intro.adoc#spring-batch-intro,Spring Batch Introduction>> :: Background, usage
+xref:spring-batch-intro.adoc[Spring Batch Introduction] :: Background, usage
  scenarios, and general guidelines.
-<<spring-batch-architecture.adoc#springBatchArchitecture,Spring Batch Architecture>> :: Spring Batch
+xref:spring-batch-architecture.adoc[Spring Batch Architecture] :: Spring Batch
 architecture, general batch principles, batch processing strategies.
-<<whatsnew.adoc#whatsNew,What's new in Spring Batch 5.1>> :: New features introduced in version 5.1.
-<<domain.adoc#domainLanguageOfBatch,The Domain Language of Batch>> :: Core concepts and abstractions
+xref:whatsnew.adoc[What's new in Spring Batch 5.1] :: New features introduced in version 5.1.
+xref:domain.adoc[The Domain Language of Batch] :: Core concepts and abstractions
 of the Batch domain language.
-<<job.adoc#configureJob,Configuring and Running a Job>> :: Job configuration, execution, and
+xref:job.adoc[Configuring and Running a Job] :: Job configuration, execution, and
 administration.
-<<step.adoc#configureStep,Configuring a Step>> :: Step configuration, different types of steps, and
+xref:step.adoc[Configuring a Step] :: Step configuration, different types of steps, and
 controlling step flow.
-<<readersAndWriters.adoc#readersAndWriters,Item reading and writing>> :: `ItemReader`
+xref:readersAndWriters.adoc[Item reading and writing] :: `ItemReader`
 and `ItemWriter` interfaces and how to use them.
-<<processor.adoc#itemProcessor,Item processing>> :: `ItemProcessor` interface and how to use it.
-<<scalability.adoc#scalability,Scaling and Parallel Processing>> :: Multi-threaded steps,
+xref:processor.adoc[Item processing] :: `ItemProcessor` interface and how to use it.
+xref:scalability.adoc#scalability[Scaling and Parallel Processing] :: Multi-threaded steps,
 parallel steps, remote chunking, and partitioning.
 <<repeat.adoc#repeat,Repeat>> :: Completion policies and exception handling of repetitive actions.
 <<retry.adoc#retry,Retry>> :: Retry and backoff policies of retryable operations.
-<<testing.adoc#testing,Unit Testing>> :: Job and Step testing facilities and APIs.
-<<common-patterns.adoc#commonPatterns, Common Patterns>> :: Common batch processing patterns
+xref:testing.adoc[Unit Testing] :: Job and Step testing facilities and APIs.
+xref:common-patterns.adoc#commonPatterns[Common Patterns] :: Common batch processing patterns
 and guidelines.
-<<spring-batch-integration.adoc#springBatchIntegration,Spring Batch Integration>> :: Integration
+xref:spring-batch-integration.adoc[Spring Batch Integration] :: Integration
 between Spring Batch and Spring Integration projects.
-<<monitoring-and-metrics.adoc#monitoring-and-metrics,Monitoring and metrics>> :: Batch jobs
+xref:monitoring-and-metrics.adoc[Monitoring and metrics] :: Batch jobs
 monitoring and metrics.
 
 The following appendices are available:
 
 [horizontal]
-<<appendix.adoc#listOfReadersAndWriters,List of ItemReaders and ItemWriters>> :: List of
+xref:appendix.adoc#listOfReadersAndWriters[List of ItemReaders and ItemWriters] :: List of
 all provided item readers and writers.
-<<schema-appendix.adoc#metaDataSchema,Meta-Data Schema>> :: Core tables used by the Batch
+xref:schema-appendix.adoc#metaDataSchema[Meta-Data Schema] :: Core tables used by the Batch
 domain model.
-<<transaction-appendix.adoc#transactions,Batch Processing and Transactions>> :: Transaction
+xref:transaction-appendix.adoc#transactions[Batch Processing and Transactions] :: Transaction
 boundaries, propagation, and isolation levels used in Spring Batch.
 <<glossary.adoc#glossary,Glossary>> :: Glossary of common terms, concepts, and vocabulary of
 the Batch domain.
