Enable Section Summary TOC for small pages

--- a/spring-batch-docs/modules/ROOT/pages/job.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/job.adoc
@@ -1,6 +1,7 @@
 
 [[configureJob]]
 = Configuring and Running a Job
+:page-section-summary-toc: 1
 
 ifndef::onlyonetoggle[]
 endif::onlyonetoggle[]
