--- a/spring-batch-docs/modules/ROOT/pages/readersAndWriters.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/readersAndWriters.adoc
@@ -1,6 +1,7 @@
 
 [[readersAndWriters]]
 = ItemReaders and ItemWriters
+:page-section-summary-toc: 1
 
 ifndef::onlyonetoggle[]
 endif::onlyonetoggle[]
