--- a/spring-batch-docs/modules/ROOT/pages/readers-and-writers/flat-files.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/readers-and-writers/flat-files.adoc
@@ -1,5 +1,6 @@
 [[flatFiles]]
 = Flat Files
+:page-section-summary-toc: 1
 
 One of the most common mechanisms for interchanging bulk data has always been the flat
 file. Unlike XML, which has an agreed upon standard for defining how it is structured
